[package]
name = "fuzzy-muff"
version = "0.3.8"
authors = ["Jinzhou Zhang <lotabout@gmail.com>"]
description = "Fuzzy Matching Library"
documentation = "https://docs.rs/fuzzy-matcher"
homepage = "https://github.com/lotabout/fuzzy-matcher"
repository = "https://github.com/lotabout/fuzzy-matcher"
readme  = "README.md"
keywords = ["fuzzy", "match", "text", "search"]
license = "MIT"
edition = "2018"

[features]
default = []
compact = []


[dependencies]
thread_local = "1.1.7"

[dev-dependencies]
termion = "2.0.1"
