[package]
name = "fuzzy-muff"
version = "0.3.10"
authors = ["Jinzhou Zhang <lotabout@gmail.com>"]
description = "Fuzzy Matching Library"
documentation = "https://docs.rs/fuzzy-matcher"
homepage = "https://github.com/lotabout/fuzzy-matcher"
repository = "https://github.com/lotabout/fuzzy-matcher"
readme = "README.md"
keywords = ["fuzzy", "match", "text", "search"]
license = "MIT"
edition = "2018"

[lib]
name = "fuzzy_matcher"
path = "src/lib.rs"

[features]
default = []
compact = []

[dependencies]
thread_local = "1.1.8"

[dev-dependencies]
termion = "3.0.0"
